Fixed cropping
Still has weird pixel artifact (seems like it might be from the browser however, in this case Safari)

--- a/public/_css/nav.css
+++ b/public/_css/nav.css
@@ -4,7 +4,7 @@ header {
 }
 
 header nav a {
-    margin-right: -5px;
+    margin-right: -4px;
 }
 
 header nav a:not([title="home"]) img:first-child {
